--- a/index.html
+++ b/index.html
@@ -5,8 +5,158 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Farmers Fight for Johnny's Girls</title>
+
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      .site {
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
+      }
+
+      main,
+      .content {
+        max-width: 1200px;
+        margin: 0 auto;
+        width: 100%;
+      }
+
+      main {
+        flex: 1;
+      }
+
+      h1 {
+        margin: 0;
+      }
+
+      section {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+      }
+
+      header,
+      footer {
+        background-color: lightgray;
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+
+      footer {
+        height: 50px;
+      }
+
+      .splash {
+        min-height: 300px;
+        background-color: lightblue;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .prize,
+      .details {
+        min-height: 200px;
+        background-color: lightcyan;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      section .prize:not(:first-child),
+      section .details:not(:first-child) {
+        margin-left: 10px;
+      }
+
+      .support {
+        height: 300px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        background-color: antiquewhite;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .contact-info {
+        height: 100px;
+        background-color: lightgreen;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .sponsors {
+        height: 150px;
+        background-color: azure;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      @media (max-width: 800px) {
+        section {
+          flex-direction: column;
+        }
+
+        section .prize,
+        section .details {
+          margin-left: 0;
+          margin-top: 10px;
+        }
+
+        .splash,
+        .support {
+          margin-bottom: 0;
+        }
+      }
+    </style>
   </head>
-  <body>
-    <h1>Farmers fight for Johnny's girls</h1>
+  <body class="site">
+    <header>
+      <div class="content">
+        <h1>Farmers Fight for Johnny's girls</h1>
+      </div>
+    </header>
+    <main>
+      <section class="splash">
+        Large image of the prize draw and a CTA button to buy a ticket
+      </section>
+      <section>
+        <div class="prize">Prize 1</div>
+        <div class="prize">Prize 2</div>
+        <div class="prize">Prize 3</div>
+        <div class="prize">Prize 4</div>
+        <div class="prize">Prize 5</div>
+      </section>
+      <section class="support">
+        Brief description of what this is in support of
+      </section>
+      <section class="details-wrapper">
+        <div class="details">Details of the Big prize</div>
+        <div class="details">Details of our mission</div>
+        <div class="details">Details of the draw</div>
+      </section>
+      <section class="contact-info">Contact us here</section>
+      <section class="sponsors">Sponsors logos</section>
+    </main>
+    <footer>
+      <div class="content">Footer can contain legal info, etc...</div>
+    </footer>
   </body>
 </html>
